--- a/etc/kayobe/dns.yml
+++ b/etc/kayobe/dns.yml
@@ -3,16 +3,20 @@
 # DNS.
 
 # Whether kayobe should configure resolv.conf.
-#resolv_is_managed:
+resolv_is_managed: true
 
 # List of DNS nameservers.
-#resolv_nameservers:
+resolv_nameservers:
+  - 172.16.0.44
+  - 172.16.0.88
 
 # DNS domain suffix.
-#resolv_domain:
+resolv_domain: cubi.bihealth.org
 
 # List of DNS search suffixes.
-#resolv_search:
+resolv_search:
+  - cubi.bihealth.org
+  - bihealth.org
 
 # List of IP address and netmask pairs to sort addresses returned by
 # gethostbyname.
