--- a/etc/kayobe/idrac.yml
+++ b/etc/kayobe/idrac.yml
@@ -3,10 +3,10 @@
 # iDRAC configuration.
 
 # Default username for iDRACs.
-#idrac_default_username:
+idrac_default_username: root
 
 # Default password for iDRACs.
-#idrac_default_password:
+idrac_default_password: calvin
 
 # Default IP address for iDRACs.
 #idrac_default_ip:
