--- a/etc/kayobe/seed-hypervisor.yml
+++ b/etc/kayobe/seed-hypervisor.yml
@@ -10,7 +10,8 @@
 # Seed hypervisor network interface configuration.
 
 # List of networks to which seed hypervisor nodes are attached.
-#seed_hypervisor_network_interfaces:
+seed_hypervisor_network_interfaces:
+  - compute_net
 
 # List of default networks to which seed hypervisor nodes are attached.
 #seed_hypervisor_default_network_interfaces:
