--- a/etc/kayobe/networks.yml
+++ b/etc/kayobe/networks.yml
@@ -35,8 +35,7 @@ external_net_names:
   - compute_net
 
 # Name of the network used to expose the public OpenStack API endpoints.
-public_net_name:
-  - compute_net
+public_net_name: compute_net
 
 # Name of the network used by Neutron to carry tenant overlay network traffic.
 tunnel_net_name: compute_net
@@ -64,21 +63,20 @@ storage_mgmt_net_name: compute_net
 ###############################################################################
 # Network definitions.
 
-compute_net_cidr: 172.16.32.0/19
+compute_net_cidr: 172.16.32.0/19  # long-term: 172.16.32.0/21
 compute_net_gateway: 172.16.32.1
-compute_net_internal_vip_address: 172.16.32.5
-compute_net_external_vip_address: 172.16.32.5
-compute_net_internal_fqdn: stack-api.cubi.bihealth.org
-compute_net_external_fqdn: stack-api.cubi.bihealth.org
-compute_net_allocation_pool_start: 172.16.32.11
-compute_net_allocation_pool_end: 172.16.32.20
-compute_net_inspection_allocation_pool_start: 172.16.32.201
-compute_net_inspection_allocation_pool_end: 172.16.32.210
-compute_net_neutron_allocation_pool_start: 172.16.32.211
-compute_net_neutron_allocation_pool_end: 172.16.32.220
+compute_net_allocation_pool_start: 172.16.32.11              # 172.16.32.1
+compute_net_allocation_pool_end: 172.16.32.20                # 172.16.33.254
+compute_net_neutron_allocation_pool_start: 172.16.32.211     # 172.16.34.1    # long-term: 172.16.37.1
+compute_net_neutron_allocation_pool_end: 172.16.32.220       # 172.16.35.254  # long-term: 172.16.38.254
+compute_net_inspection_allocation_pool_start: 172.16.32.201  # 172.16.36.1    # long-term: 172.16.35.1
+compute_net_inspection_allocation_pool_end: 172.16.32.210    # 172.16.37.254  # long-term: 172.16.36.254
 compute_net_libvirt_network_name: compute_net
+compute_net_physical_network: compute
 
-ceph_cluster_net_cidr: 192.168.2.0/24
+cephcluster_net_cidr: 192.168.2.0/24
+cephcluster_net_allocation_pool_start: 192.168.2.11
+cephcluster_net_allocation_pool_end: 192.168.2.20
 
 # Admin network IP information.
 # admin_oc_net_cidr:
