--- a/etc/kayobe/kolla.yml
+++ b/etc/kayobe/kolla.yml
@@ -232,7 +232,7 @@
 #kolla_enable_tls_internal:
 
 # Whether debug logging is enabled. Default is 'false'.
-#kolla_openstack_logging_debug:
+kolla_openstack_logging_debug: true
 
 # Upper constraints file for installation of Kolla.
 # Default value is {{ pip_upper_constraints_file }}.
@@ -265,7 +265,7 @@
 #kolla_enable_central_logging:
 #kolla_enable_ceph_rgw:
 #kolla_enable_ceph_rgw_loadbalancer:
-#kolla_enable_cinder:
+kolla_enable_cinder: "yes"
 #kolla_enable_cinder_backend_hnas_nfs:
 #kolla_enable_cinder_backend_iscsi:
 #kolla_enable_cinder_backend_lvm:
@@ -285,10 +285,10 @@
 #kolla_enable_external_mariadb_load_balancer:
 #kolla_enable_fluentd:
 #kolla_enable_freezer:
-#kolla_enable_glance:
+kolla_enable_glance: "yes"
 #kolla_enable_glance_horizon_policy_file:
 #kolla_enable_glance_image_cache:
-#kolla_enable_gnocchi:
+kolla_enable_gnocchi: "yes"
 #kolla_enable_gnocchi_statsd:
 #kolla_enable_grafana:
 #kolla_enable_hacluster:
@@ -334,7 +334,7 @@
 #kolla_enable_kuryr:
 #kolla_enable_loadbalancer:
 #kolla_enable_magnum:
-#kolla_enable_manila:
+kolla_enable_manila: "yes"
 #kolla_enable_manila_backend_cephfs_native:
 #kolla_enable_manila_backend_cephfs_nfs:
 #kolla_enable_manila_backend_generic:
@@ -431,21 +431,21 @@
 
 # Virtual IP address of OpenStack internal API. Default is the vip_address
 # attribute of the internal network.
-#kolla_internal_vip_address:
+kolla_internal_vip_address: 172.16.32.6
 
 # Fully Qualified Domain Name (FQDN) of OpenStack internal API. Default is the
 # fqdn attribute of the internal network if set, otherwise
 # kolla_internal_vip_address.
-#kolla_internal_fqdn:
+kolla_internal_fqdn: stack-api.cubi.bihealth.org
 
 # Virtual IP address of OpenStack external API. Default is the vip_address
 # attribute of the external network.
-#kolla_external_vip_address:
+kolla_external_vip_address: 172.16.32.6
 
 # Fully Qualified Domain Name (FQDN) of OpenStack external API. Default is the
 # fqdn attribute of the external network if set, otherwise
 # kolla_external_vip_address.
-#kolla_external_fqdn:
+kolla_external_fqdn: stack-api.cubi.bihealth.org
 
 ###############################################################################
 # TLS certificate bundle management
