--- a/etc/kayobe/overcloud.yml
+++ b/etc/kayobe/overcloud.yml
@@ -3,15 +3,22 @@
 # Overcloud configuration.
 
 # Default Ansible group for overcloud hosts.
-#overcloud_group_default:
+overcloud_group_default: baremetal-compute
 
 # List of names of Ansible groups for overcloud hosts.
-#overcloud_groups:
+overcloud_groups:
+  - controllers
+  - baremetal-compute
 
 # Dict mapping overcloud Ansible group names to lists of hosts in the group.
 # As a special case, the group 'ignore' can be used to specify hosts that
 # should not be added to the inventory.
-#overcloud_group_hosts_map:
+overcloud_group_hosts_map:
+  controllers:
+    - stack-1
+    - stack-2
+    - stack-3
+    - stack-4
 
 # To prevent some network issues you can choose to disable cloud-init
 #disable_cloud_init:
